# lapser

./: CMakeLists.txt  LICENSE  README.md  RaspiCamControl.c  RaspiStuff.c  camera-mmal.cpp  camera-mmal.hpp  camera-opencv.cpp  camera-opencv.hpp  config.cpp  config.hpp  config.json  display.cpp  display.hpp  icamera.hpp  input.cpp  input.hpp  main.cpp
